# DeepSynaps-Protocol-Studio

./: .agent-7-text-analyzer-report.md  .coveragerc  .dockerignore  .env.example  .env.staging.example  .gitattributes  .gitignore  .pr-body.txt  .secrets-new-dev-1778753233.tmp  AGENTS.md  AGENT_A_ACTION_CARD.md  AI_CORE_IMPROVEMENT_PLAN.md  ALI_ACTION_ITEMS.md  ASSESSMENTS_CONDITION_BATTERY_MATRIX.md  ASSESSMENTS_V2_ARCHITECTURE_REPORT.md  ASSESSMENTS_V2_CLINICAL_SAFETY_REPORT.md  ASSESSMENTS_V2_FINAL_REPORT.md  BEHAVIOURAL_OBSERVATION_FRAMEWORK.md  BEHAVIOURAL_OBSERVATION_RESEARCH.md  BEHAVIOURAL_RISK_MARKERS.md  BILLING_INTEGRATION_NOTES.md  BIOMARKERS_ARCHITECTURE.md  BIOMARKERS_FINAL_REPORT.md  BLOOD_LAB_BIOMARKER_RESEARCH.md  BLOOD_NEUROINFLAMMATION_HORMONE_BIOMARKER_MATRIX.md  BRAINMAP_PHASE2_REPORT.md  BRANCH_AUDIT_2026-05-09.md  BRANCH_CLEANUP_ANALYSIS.md  CI_ARTIFACT_CLEANUP_REPORT.md  CI_FAILURE_TRIAGE_REPORT.md  CLAUDE.md  CLINICAL_DATA_PLATFORM_BUILD_REPORT.md  CLINICAL_REVIEW_BRIEFING.md  CLINICAL_REVIEW_COORDINATION_LOG.md  CLINICAL_REVIEW_PACK.md  CLINICAL_REVIEW_PHASE_ACTIVATION.md  CLINICAL_SIGNOFF_REPORT.md  CODEBASE_HEALTH_CHECK_2026-05-14.md  CODE_REVIEW_KICKOFF.md  CONTRIBUTING.md  (+206 more)
apps/api/: .env.example  DEPLOY.md  Dockerfile  README.md  adhd200_adapter.py  ahrq_epss_adapter.py  alembic.ini  base_adapter.py  chembl_adapter.py  clinicaltrials_adapter.py  cobre_adapter.py  core_adapter.py  corr_adapter.py  cov-routers.json  dailymed_adapter.py  dbsnp_adapter.py  deeptwin_causal.py  deeptwin_integration.py  deeptwin_nof1.py  drugbank_adapter.py  ds030_adapter.py  epistemonikos_adapter.py  evidence_store.py  fly.toml  functional_connectomes_1000_adapter.py  genetic_bridge.py  glasser2016_adapter.py  gnomad_adapter.py  gordon2014_adapter.py  gsp_adapter.py  gwas_catalog_adapter.py  hcp_lifespan_adapter.py  ixi_adapter.py  knowledge_router_v2.py  medication_bridge.py  nice_adapter.py  nih_reporter_adapter.py  oasis_adapter.py  offsides_twosides_adapter.py  pubmed_adapter.py  (+12 more)
apps/api/adapters/: __init__.py  base_adapter.py  models.py  ndc_directory_adapter.py  orange_book_adapter.py  otseeker_adapter.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_clinical_tables.py  003_neuro_platform_schema.py  004_patient_invites_messages.py  005_wearable_monitoring.py  006_wearable_fk_indexes.py  007_media_workflows.py  008_home_device_workflows.py  009_messages_extended_fields.py  010_wave15_new_tables.py  010a_ae_resolved_at_consent_fields.py  011_fk_constraints_and_data_integrity.py  012_billing_status_enum.py  013_indexes_and_constraints.py  014_clinician_home_program_tasks.py  015_home_program_task_revision.py  016_home_program_server_task_id.py  017_patient_home_program_task_completions.py  018_telegram_agent_chats.py  (+134 more)
apps/api/app/: __init__.py  adapter_wiring.py  auth.py  crypto.py  database.py  entitlements.py  errors.py  jobs.py  lifespan_v4.py  lifespan_wiring.py  limiter.py  logging_setup.py  main.py  main_v4.py  packages.py  sentry_setup.py  settings.py
apps/api/deepsynaps_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/phase5/: __init__.py  deeptwin_integration.py  medication_bridge.py  qeeg_bridge.py
apps/api/research/: DATABASE_MASTER_REGISTRY.md  DB_REQUIREMENTS_EVIDENCE_OUTCOMES.md  DB_REQUIREMENTS_GENETIC_PROTOCOL_SAFETY.md  DB_REQUIREMENTS_MEDICATION_PHARMA.md  DB_REQUIREMENTS_NEUROIMAGING.md  DEEPSYNAPS_CANONICAL_SCHEMA.md  DEEPSYNAPS_CLINICAL_INTELLIGENCE_UX_RULES.md  DEEPSYNAPS_DATABASE_ADAPTER_ARCHITECTURE.md  DEEPSYNAPS_EXTERNAL_RESEARCH_INTELLIGENCE.md  DEEPSYNAPS_KNOWLEDGE_GOVERNANCE.md  DEEPSYNAPS_KNOWLEDGE_LAYER_ARCHITECTURE.md  DEEPSYNAPS_MULTIMODAL_INTELLIGENCE_LAYER.md  EEG_NORMATIVE_INTEGRATION_REPORT.md  HANDBOOK_AI_SAFETY_GOVERNANCE.md  HANDBOOK_CANONICAL_CONTRACT.md  HANDBOOK_GENERATOR_UX_BENCHMARK.md  MRI_ATLAS_INTEGRATION_REPORT.md  NEUROMODULATION_HANDBOOK_BENCHMARK.md  OPEN_SOURCE_HANDBOOK_GENERATOR_STACK.md  OPEN_SOURCE_PATIENT_PORTAL_STACK.md  OPEN_SOURCE_PHASE1_STACK_REPORT.md  OPEN_SOURCE_PHASE2_STACK_REPORT.md  PATIENT_DASHBOARD_SAFETY_DESIGN.md  PATIENT_HOME_PROGRAM_DESIGN.md  PATIENT_PORTAL_UX_BENCHMARK.md  PGX_INTEGRATION_REPORT.md  PHASE2_ADVERSE_EVENT_INTELLIGENCE.md  PHASE2_BRAIN_ATLAS_NETWORK_REPORT.md  PHASE2_NEUROIMAGING_COHORT_REPORT.md  PHASE2_NEUROSYNTH_INTEGRATION_REPORT.md  PROMIS_OUTCOMES_INTEGRATION_REPORT.md  RXNORM_INTEGRATION_REPORT.md  SIMNIBS_INTEGRATION_REPORT.md
apps/api/scripts/: migrate_sqlite_to_pg.py  seed_demo.py  smoke_mne_sphere_eeg_forward.py
apps/api/tests/: .test_deepsynaps_protocol_studio.db-journal  conftest.py  test_2fa_flow.py  test_access_control.py  test_access_control_isolation.py  test_acp_journal_club_live_adapter.py  test_adherence_events_launch_audit.py  test_adherence_events_router.py  test_admin_pgvector_router.py  test_adverse_event_adapters.py  test_adverse_event_medication_safety.py  test_adverse_event_registry.py  test_adverse_events.py  test_adverse_events_hub_drill_in.py  test_adverse_events_launch_audit.py  test_adverse_events_router.py  test_advisor_outcome_pairing_service.py  test_agent_admin_router.py  test_agent_audit.py  test_agent_audit_service.py  test_agent_billing_router.py  test_agent_brain_providers.py  test_agent_brain_registry.py  test_agent_brain_router.py  test_agent_brain_safety.py  test_agent_brain_wired_providers.py  test_agent_budgets.py  test_agent_config_router.py  test_agent_contract.py  test_agent_cost_cap.py  test_agent_evidence_tools.py  test_agent_hires_repository.py  test_agent_pending_calls.py  test_agent_prompt_overrides.py  test_agent_registry.py  test_agent_runs_csv.py  test_agent_scheduler.py  test_agent_skills_router.py  test_agent_skills_seed_service.py  test_agent_sla.py  (+622 more)
apps/qeeg-trainer/: README.md  TRAINING_STACK.md  pyproject.toml
apps/worker/: README.md  pyproject.toml  pytest.ini
apps/worker/app/: __init__.py  deeptwin_simulation.py  jobs.py
apps/worker/tests/: conftest.py  test_deeptwin_simulation.py  test_jobs_celery_wiring.py  test_jobs_startup.py  test_jobs_tasks.py
(+3102 files in other folders)
