[project]
name = "deepsynaps-protocol-studio"
version = "0.1.0"
description = "Clinical neuromodulation document generation platform scaffold."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.116.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]
worker = [
    "pydantic>=2.11.0,<3.0.0",
]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
