[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsynaps-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    # Required by media_router's Form() / UploadFile handlers. Used to be
    # pulled in transitively by older fastapi releases; must be explicit now.
    "python-multipart>=0.0.9",
    "pydantic>=2.11.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "aiofiles>=23.0.0,<25.0.0",
    "deepsynaps-core-schema",
    "deepsynaps-condition-registry",
    "deepsynaps-modality-registry",
    "deepsynaps-device-registry",
    "deepsynaps-safety-engine",
    "deepsynaps-generation-engine",
    "slowapi>=0.1.9",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0,<2.0.0",
    "python-telegram-bot>=20.0",
    "pyotp>=2.9",
    "cryptography>=42",
    "pillow>=10",
    # qEEG analysis pipeline — EDF parsing + spectral analysis
    "mne>=1.7.0,<2.0.0",
    "scipy>=1.13.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
# Editable path dep on the standalone MNE / SpecParam / eLORETA / normative-z
# pipeline. Pulled in ONLY when you `pip install -e ".[qeeg]"` — keeping it
# out of the base `dependencies` list means plain `pip install` succeeds on
# machines that don't have MNE-Python / fooof / autoreject / pyprep /
# mne-icalabel / mne-connectivity installed. The runtime import is already
# guarded in `app/routers/qeeg_analysis_router.py::_try_import_full_pipeline`.
qeeg = [
    "deepsynaps-qeeg @ file:///C:/Users/yildi/OneDrive/Desktop/deepsynaps_qeeg_analyzer",
]

[tool.setuptools]
py-modules = []
