[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsynaps-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    # Required by media_router's Form() / UploadFile handlers. Used to be
    # pulled in transitively by older fastapi releases; must be explicit now.
    "python-multipart>=0.0.9",
    "pydantic>=2.11.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "aiofiles>=23.0.0,<25.0.0",
    "deepsynaps-core-schema @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/core-schema",
    "deepsynaps-condition-registry @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/condition-registry",
    "deepsynaps-modality-registry @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/modality-registry",
    "deepsynaps-device-registry @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/device-registry",
    "deepsynaps-safety-engine @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/safety-engine",
    "deepsynaps-generation-engine @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/generation-engine",
    "slowapi>=0.1.9",
    # APScheduler — BackgroundScheduler powers the Phase 9 agent abuse-signal
    # hourly cron (apps/api/app/services/agent_scheduler.py). Gated on
    # DEEPSYNAPS_AGENT_CRON_ENABLED so tests / CI don't fire jobs.
    "apscheduler>=3.10",
    # Redis client used by SlowAPI's `limits` storage adapter when
    # DEEPSYNAPS_LIMITER_REDIS_URI is set. Without it the rate-limiter
    # backend falls back to in-memory and the warning at startup logs
    # what's wrong. See apps/api/app/limiter.py for the selection logic.
    "redis>=5.0.0,<6.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0,<2.0.0",
    "python-telegram-bot>=20.0",
    "pyotp>=2.9",
    "cryptography>=42",
    "pillow>=10",
    # qEEG analysis pipeline — EDF parsing + spectral analysis
    "mne>=1.7.0,<2.0.0",
    "scipy>=1.13.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    # qEEG advanced analyses — aperiodic/periodic spectral decomposition
    "specparam>=2.0.0rc0,<3.0.0",
    # Reports stream HTML→PDF render path (PR #144 night shift). Imported in
    # packages/render-engine/src/deepsynaps_render_engine/renderers.py via
    # try/except → raises PdfRendererUnavailable when missing, so the
    # /api/v1/reports/{id}/render?format=pdf endpoint returns HTTP 503 with
    # code "pdf_renderer_unavailable" instead of producing a blank PDF.
    # NOTE: WeasyPrint requires Pango + Cairo system libs in the runtime
    # image (libpango-1.0-0, libpangoft2-1.0-0, libcairo2, libharfbuzz0b,
    # libgdk-pixbuf2.0-0). These are NOT in the current slim Docker base —
    # see DEPLOYMENT.md before relying on PDF output.
    "weasyprint>=60.0,<70.0",
    # qEEG MNE-Python pipeline (preprocess, ICA, SpecParam, connectivity,
    # eLORETA, normative z-scores, RAG) is installed as a SIBLING editable
    # package by the Dockerfile + developer setup, NOT declared here. Pip's
    # resolver can't pair a declared dep name with a sibling editable path
    # in the same `pip install` invocation, so the package is installed
    # independently instead. The façade in `app/services/qeeg_pipeline.py`
    # imports it at runtime with HAS_MNE_PIPELINE guard, so environments
    # without it still boot. Developers:
    #   pip install -e packages/qeeg-pipeline
]

[project.optional-dependencies]
# Editable path dep on the standalone MNE / SpecParam / eLORETA / normative-z
# pipeline. Pulled in ONLY when you `pip install -e ".[qeeg]"` — keeping it
# out of the base `dependencies` list means plain `pip install` succeeds on
# machines that don't have MNE-Python / fooof / autoreject / pyprep /
# mne-icalabel / mne-connectivity installed. The runtime import is already
# guarded in `app/routers/qeeg_analysis_router.py::_try_import_full_pipeline`.
qeeg = [
    "deepsynaps-qeeg @ file:///Users/aliyildirim/DeepSynaps-Protocol-Studio/packages/qeeg-pipeline",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
