[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsynaps-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4,<6.0",
    "fastapi>=0.116.0,<1.0.0",
    # Required by media_router's Form() / UploadFile handlers. Used to be
    # pulled in transitively by older fastapi releases; must be explicit now.
    "python-multipart>=0.0.9",
    "pydantic>=2.11.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    # Prometheus client — metrics collection for production monitoring
    "prometheus_client>=0.20.0",
    "aiohttp>=3.10.0,<4.0.0",
    "aiofiles>=23.0.0,<25.0.0",
    "deepsynaps-core-schema",
    "deepsynaps-clinical-data-registry",
    "deepsynaps-condition-registry",
    "deepsynaps-modality-registry",
    "deepsynaps-device-registry",
    "deepsynaps-biometrics-pipeline",
    "deeptwin-neuroai-lab",
    "deepsynaps-safety-engine",
    "deepsynaps-generation-engine",
    "slowapi>=0.1.9",
    # APScheduler — BackgroundScheduler powers the Phase 9 agent abuse-signal
    # hourly cron (apps/api/app/services/agent_scheduler.py). Gated on
    # DEEPSYNAPS_AGENT_CRON_ENABLED so tests / CI don't fire jobs.
    "apscheduler>=3.10",
    # Redis client used by SlowAPI's `limits` storage adapter when
    # DEEPSYNAPS_LIMITER_REDIS_URI is set. Without it the rate-limiter
    # backend falls back to in-memory and the warning at startup logs
    # what's wrong. See apps/api/app/limiter.py for the selection logic.
    "redis>=5.0.0,<6.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0,<2.0.0",
    "python-telegram-bot>=20.0",
    "pyotp>=2.9",
    "cryptography>=42",
    "pillow>=10",
    # Safe XML parsing — used by clinvar adapter and handbook evidence
    # services that consume external XML (NCBI E-utilities, EuropePMC).
    # Stdlib xml.etree is vulnerable to billion-laughs / external entity attacks.
    "defusedxml>=0.7.1",
    # qEEG analysis pipeline — EDF parsing + spectral analysis
    "mne>=1.7.0,<2.0.0",
    "edfio>=0.4",
    "scipy>=1.13.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    # qEEG advanced analyses — aperiodic/periodic spectral decomposition
    "specparam>=2.0.0rc0,<3.0.0",
    # Phase 1 neuroimaging I/O (NiBabel / PyBIDS / PyNWB) — see docs/DeepSynaps_OpenSource_Neurotech_Architecture.md
    "nibabel>=5.2.0,<6.0.0",
    "pybids>=0.16.0,<1.0.0",
    "pynwb>=2.8.0,<4.0.0",
    # Phase 2a NeuroKit2 (peripheral physiology) — see docs/DeepSynaps_OpenSource_Neurotech_Architecture.md
    "neurokit2>=0.2.10,<0.3.0",
    # Phase 2b Nilearn + DIPY (MRI / dMRI analysis) — see docs/DeepSynaps_OpenSource_Neurotech_Architecture.md
    "nilearn>=0.13.0,<0.15.0",
    "dipy>=1.12.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    # Phase 3 simulation: BrainSpace (BSD-3) for connectome gradient
    # decomposition. MONAI is in the [neuro-dl] extra; SimNIBS is GPL-3.0 and
    # is shelled out (NOT a Python dep) to keep the API MIT-clean.
    "brainspace>=0.1.10,<0.2.0",
    # Phase 5 Knowledge Graph (Neo4j + BioCypher) — see docs/DeepSynaps_OpenSource_Neurotech_Architecture.md
    # Pure-Python libs; both safe to add to base deps. No live Neo4j connection
    # is opened at import time — the driver is lazily constructed only when
    # NEO4J_URI / NEO4J_USER / NEO4J_PASSWORD are configured and a /kg/* route
    # is exercised. See app/services/neuroimaging/kg_neo4j.py for details.
    "neo4j>=5.20,<6.0",
    "biocypher>=0.9.0,<1.0.0",
    # Phase 4 real-time acquisition (BrainFlow client) — see docs/DeepSynaps_OpenSource_Neurotech_Architecture.md
    "brainflow>=5.0,<7.0",
    # Reports stream HTML→PDF render path (PR #144 night shift). Imported in
    # packages/render-engine/src/deepsynaps_render_engine/renderers.py via
    # try/except → raises PdfRendererUnavailable when missing, so the
    # /api/v1/reports/{id}/render?format=pdf endpoint returns HTTP 503 with
    # code "pdf_renderer_unavailable" instead of producing a blank PDF.
    # NOTE: WeasyPrint requires Pango + Cairo system libs in the runtime
    # image (libpango-1.0-0, libpangoft2-1.0-0, libcairo2, libharfbuzz0b,
    # libgdk-pixbuf-2.0-0). apps/api/Dockerfile installs them for deploys.
    "weasyprint>=60.0,<70.0",
    "python-docx>=1.1.0,<2.0.0",
    # Async HTTP client used by app/services/knowledge/adapters/rxnorm_adapter.py
    # (NLM RxNav REST API). Was previously unlisted, so adapter_registry and
    # medication_analyzer_bridge crashed at import time in any environment
    # that didn't pull it in transitively. See issue #1025.
    "aiohttp>=3.9,<4.0",
    # qEEG MNE-Python pipeline (preprocess, ICA, SpecParam, connectivity,
    # eLORETA, normative z-scores, RAG) is installed as a SIBLING editable
    # package by the Dockerfile + developer setup, NOT declared here. Pip's
    # resolver can't pair a declared dep name with a sibling editable path
    # in the same `pip install` invocation, so the package is installed
    # independently instead. The façade in `app/services/qeeg_pipeline.py`
    # imports it at runtime with HAS_MNE_PIPELINE guard, so environments
    # without it still boot. Developers:
    #   pip install -e packages/qeeg-pipeline
]

[project.optional-dependencies]
# Editable path dep on the standalone MNE / SpecParam / eLORETA / normative-z
# pipeline. Pulled in ONLY when you `pip install -e ".[qeeg]"` — keeping it
# out of the base `dependencies` list means plain `pip install` succeeds on
# machines that don't have MNE-Python / fooof / autoreject / pyprep /
# mne-icalabel / mne-connectivity installed. The runtime import is already
# guarded in `app/routers/qeeg_analysis_router.py::_try_import_full_pipeline`.
qeeg = [
    "deepsynaps-qeeg",
]
# Deep-learning EEG / medical-imaging models. NOT pulled in by a plain
# `pip install -e apps/api` — torch alone is ~750 MB unpacked, MONAI adds
# ~150 MB on top. Install with: pip install -e "apps/api[neuro-dl]"
neuro-dl = [
    "torch>=2.2,<3.0",
    "braindecode>=1.5.0,<2.0.0",
    "monai>=1.4,<2.0",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
]

# ────────────────────────────────────────────────────────────────────────────
# Coverage config (pytest-cov / coverage.py).
#
# Run with:
#   cd apps/api && python -m pytest --cov --cov-report=term-missing \
#       --cov-report=xml --cov-report=html
#
# Or via Make:
#   make test-coverage-api
#
# `fail_under` starts at the measured baseline + 5 (Phase 1) and is lifted
# toward 90 in Phase 7 once Backend API Coverage Agent (Phase 3) has shipped.
# Do NOT lower this to mask regressions — investigate the regression instead.
# See docs/test-coverage-plan.md for the full lift schedule.
# ────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "app/__main__.py",
    "tests/*",
    "alembic/*",
    "**/__pycache__/*",
    # Demo data seed scripts are exercised by integration tests, not unit
    # tests; the data files themselves are static.
    "app/data/seeds/*.json",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Phase 1 baseline gate. Raise per Phase 7 of docs/test-coverage-plan.md.
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
